# sw-nebula-service

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  tox.ini
sw_nebula_service/: __init__.py  create_schemas.py  engine.py  insert_nodes.py  models.py  utils.py
sw_nebula_service/engine/: engine.py  utils.py
sw_nebula_service/managers/: connector.py  edge_manager.py  edge_type_manager.py  space_manager.py  tag_manager.py  utils.py  vertex_manager.py
sw_nebula_service/models/: __init__.py  nodes.py  relations.py
tests/: conftest.py  test_connector.py  test_edge_manager.py  test_edge_type_manager.py  test_space_manager.py  test_sw_nebula_service.py  test_tag_manager.py  test_vertex_manager.py  utils.py
